error: fixed by default data not showing

--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,25 @@ code {
   margin-left: 24px;
 }
 
+/* padding between elements of form control */
+.PrivateSwitchBase-root-21 {
+  padding: 5px !important;
+}
+
+/* margin between elements of form control cheeck-box */
+.makeStyles-formControl-9 {
+  margin: 24px;
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
+}
+/* inner-outer spin button in type=number input */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.MuiInputBase-input {
+  /* height: 0 !important; */
+}
+
